<resources>
    <string name="app_name">News</string>

    <string name="toobar_home">首页</string>
    <string name="toobar_route">行程</string>
    <string name="toobar_easygo">深航易行</string>
    <string name="toobar_phoenix">凤凰知音</string>
    <string name="toobar_mine">我</string>

    <string name="login_regist">登录/注册</string>
    <string name="welcom_login">欢迎登录</string>
    <string name="user_level">等级：%1$s</string>
    <string name="user_mile">里程：%1$s</string>

    <string name="flight_only_go">单程</string>
    <string name="flight_go_back">往返</string>
    <string name="flight_mult">多程</string>

    <string name="guid_try_now">立即体验</string>
    <string name="search_book">查询预订</string>
    <string name="one_price">买贵1元，即可赔付</string>

    <string name="flight_state">航班动态</string>
    <string name="flight_check_in">选座值机</string>
    <string name="flight_change_date">机票改期</string>
    <string name="flight_refund">办理退票</string>
    <string name="flight_award">有奖评价</string>
    <string name="flight_shuttle">机场接送</string>
    <string name="flight_park">乘机泊车</string>
    <string name="flight_fast_check">快速安检</string>
    <string name="flight_luggage">额外行李</string>
    <string name="flight_first_meal">公务舱点餐</string>
    <string name="flight_special_guest">特殊旅客</string>
    <string name="flight_hkmacao">港澳行</string>
    <string name="flight_drive">悠自驾</string>
    <string name="flight_hotel">酒店预订</string>
    <string name="flight_soldier">军警残购票</string>
    <string name="flight_zzzs">中转住宿</string>
    <string name="flight_2dboarding">二维码登机牌</string>
    <string name="flight_upgrade">登机口升舱</string>
    <string name="flight_delay_prove">航延证明</string>
    <string name="flight_luggage_search">行李查询</string>
    <string name="flight_unusual_refund">不正常航班退票</string>
    <string name="flight_search_refund_fee">退票费查询</string>
    <string name="flight_ticket_verify">机票验真</string>
    <string name="flight_ticket_invoice">电子发票</string>
    <string name="flight_loss">遗失物品</string>
    <string name="flight_zzoneday_travel">中转一日游</string>
    <string name="flight_vip_travel">精品旅游</string>

    <string name="sz_easy_go">深航易行</string>
    <string name="sz_hot">热门目的地</string>
    <string name="more">更多</string>
    <string name="public_notice">公告</string>


    <string name="easy_go_fly_before">行前计划</string>
    <string name="easy_go_air_port">机场相关</string>
    <string name="easy_go_after_sales">售后服务</string>

    <string name="search_service">搜索相关服务</string>
    <string name="easy_go_search_hint">请输入证件号或票号</string>

    <!--凤凰知音-->
    <string name="phoenix_award_ticket">奖励客票</string>
    <string name="phoenix_shop">知音商城</string>
    <string name="phoenix_mileage_detail">里程明细</string>
    <string name="phoenix_mileage_billing">里程账单</string>
    <string name="phoenix_mileage_supplement">里程补登</string>
    <string name="phoenix_verify_online">在线认证</string>
    <string name="phoenix_exchange_segment_search">兑换航段查询</string>
    <string name="phoenix_redeem_person">兑奖受让人</string>

    <string name="phoenix_city_mileage">城市间里程</string>
    <string name="phoenix_user_manual">会员手册</string>
    <string name="phoenix_cooperation">合作伙伴</string>
    <string name="phoenix_cancel_forever">永久注销账户</string>

    <string name="mile">公里</string>
    <string name="mile_invalid_mouth">本月将作废里程</string>
    <string name="mile_invalid_next_mouth">下月将作废里程</string>

    <!--我的-->
    <string name="order_all">全部订单</string>
    <string name="order_paying">待付款</string>
    <string name="order_paied">已付款</string>

    <string name="card_level_gold">金卡</string>
    <string name="card_level_junior">儿童卡</string>
    <string name="card_level_lifetime_platinum">终身白金卡</string>
    <string name="card_level_normal">普卡</string>
    <string name="card_level_platinum">白金卡</string>
    <string name="card_level_silver">银卡</string>
    <string name="card_info_fomat">%1$s: %2$s</string>

    <string name="mine_my_wallet">我的钱包</string>
    <string name="mine_wallet_left">账号余额</string>
    <string name="mine_ecard">易卡</string>
    <string name="mine_coupon">优惠券</string>
    <string name="mine_mile">里程</string>
    <string name="yuan">元</string>
    <string name="zhang">张</string>

    <string name="current_city_title">当前城市</string>
    <string name="offten_city_title">常用城市</string>
    <string name="hot_city_title">热门城市</string>

</resources>
