<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/toolbar_bg"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginRight="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_40dp"
                >

                <LinearLayout
                    android:id="@+id/go_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/go_white_arrow"
                        />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/go_area"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:id="@+id/user_sex_header"
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10dp"
                        android:src="@mipmap/icon_header_null"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/user_sex_header"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_13sp"
                                />

                            <ImageView
                                android:id="@+id/identify_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_4dp"
                                />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/card_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6dp"
                            android:drawableLeft="@mipmap/mine_card"
                            android:drawablePadding="@dimen/_4dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sp"
                            />

                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="@drawable/mine_order_type_bg"
            >

            <TextView
                android:id="@+id/all_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mine_all_order"
                android:drawablePadding="@dimen/_12dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8dp"
                android:text="@string/order_all"
                android:textSize="@dimen/_12sp"
                />

            <TextView
                android:id="@+id/paying_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mine_order_paying"
                android:drawablePadding="@dimen/_12dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8dp"
                android:text="@string/order_paying"
                android:textSize="@dimen/_12sp"
                />

            <TextView
                android:id="@+id/paied_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/mine_order_paied"
                android:drawablePadding="@dimen/_12dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8dp"
                android:text="@string/order_paied"
                android:textSize="@dimen/_12sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15dp"
            android:paddingTop="@dimen/_4dp"
            android:paddingRight="@dimen/_15dp"
            android:paddingBottom="@dimen/_4dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mine_my_wallet"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go_arrow"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        >

                        <TextView
                            android:id="@+id/account_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.00"
                            android:textColor="@color/color_ee2934"
                            android:textSize="@dimen/_16sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/yuan"
                            android:textSize="@dimen/_10sp"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_6dp"
                        android:text="@string/mine_wallet_left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp"
                        />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/ecard_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="--"
                        android:textColor="@color/color_ee2934"
                        android:textSize="@dimen/_16sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ecard_num"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_6dp"
                        android:text="@string/mine_ecard"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp"
                        />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        >

                        <TextView
                            android:id="@+id/coupon_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="--"
                            android:textColor="@color/color_ee2934"
                            android:textSize="@dimen/_16sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zhang"
                            android:textSize="@dimen/_10sp"
                            />
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_6dp"
                        android:text="@string/mine_coupon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp"
                        />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/mile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="--"
                        android:textColor="@color/color_ee2934"
                        android:textSize="@dimen/_16sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mile"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_6dp"
                        android:text="@string/mine_mile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sp"
                        />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>